--- a/components/personal/story/StoryModal.module.css
+++ b/components/personal/story/StoryModal.module.css
@@ -108,7 +108,7 @@
 @media (max-width: 1100px) {
   .modal {
     width: 100vw;
-    height: 100dvh;
+    height: 100svh;
     max-width: none;
     max-height: none;
     border-radius: 0;
